k8-project-3/solution/02-namespaces-and-quotas.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
