k8-project-3/solution/12-rbac-and-client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-client-pod
  namespace: production
spec:
  serviceAccountName: api-client-sa
  containers:
    - name: curl
      image: curlimages/curl:8.10.1
      command: ["sleep", "3600"]
      resources:
        requests:
          cpu: 10m
          memory: 16Mi
        limits:
          cpu: 100m
          memory: 64Mi
