k8-project-3/solution/09-web-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-api-lb
  namespace: production
  annotations:
    service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "40"
spec:
  type: LoadBalancer
  selector:
    app: web-api
  ports:
    - port: 80
      targetPort: 8080
